<resources>
    <string name="app_name">iBudget</string>
    <string name="title_home">Home</string>
    <string name="amount">Amount:</string>
    <string name="title_payee">Payee</string>
    <string name="title_pay">Pay</string>
    <string name="title_graph">Summary</string>
    <string name="title_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_label">Date:</string>
    <string name="time_label">Time:</string>
    <string name="payee_dropdown_prompt">Choose a payee</string>
    <string name="notes_hint">Enter notes</string>
    <string name="set_time_button_label">Set Time</string>
    <string name="add_reminder_button_label">Add Reminder</string>
    <string name="title_add_notification">Add Notification</string>
</resources>
