<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_payee"
        android:icon="@drawable/ic_business_black_24"
        android:title="@string/title_payee" />

    <item
        android:id="@+id/navigation_pay"
        android:icon="@drawable/ic_payment_black_24"
        android:title="@string/title_pay" />

    <item
        android:id="@+id/navigation_graph"
        android:icon="@drawable/ic_insights_black_24"
        android:title="@string/title_graph" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24"
        android:title="@string/title_settings" />

</menu>